[gd_scene load_steps=4 format=3 uid="uid://bf3ffhfncabpc"]

[ext_resource type="Script" uid="uid://d0r57dgyyyh2r" path="res://gnome_lights/scripts/room.gd" id="1_ccted"]
[ext_resource type="TileSet" uid="uid://dj0xoevfo5b3q" path="res://gnome_lights/resources/room_tileset.tres" id="2_h6yst"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_47glm"]

[node name="Room" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ccted")

[node name="FloorTiles" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_h6yst")

[node name="WallTiles" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_h6yst")

[node name="EdgeTiles" type="TileMapLayer" parent="."]
light_mask = 3
tile_set = ExtResource("2_h6yst")

[node name="DoorTiles" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_h6yst")

[node name="LightcastTiles" type="TileMapLayer" parent="."]
material = SubResource("ShaderMaterial_47glm")
tile_set = ExtResource("2_h6yst")

[node name="Doors" type="Node2D" parent="."]

[node name="RoomArea" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoomArea"]

[node name="Entities" type="Node2D" parent="."]
y_sort_enabled = true
